fix css + update splash + update app banner

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,7 @@ body {
 
 #root {
   background-color: var(--swatch-primary);
-  font-family: "Lexend Exa";
+  font-family: "Segoe UI";
   position: absolute;
   width: 80%;
   left: 10%;
@@ -55,7 +55,7 @@ body {
 }
 #splash-screen {
   background-image: linear-gradient(to bottom, #BBE0F2, #0094F0);
-  color: white;
+  color: black;
   font-size: 5vw;
   border-color: black;
   border-width: 2px;
@@ -69,13 +69,22 @@ body {
   vertical-align: center;
 }
 
+#splash-screen-title {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+#splash-screen-body {
+  font-size: 24px;
+}
+
 #edit-toolbar {
   background-color: transparent;
   float: right;
 }
 
-.top5-button,
-.top5-button-disabled {
+.playlister-button,
+.playlister-button-disabled {
   font-size: 36pt;
   border-width: 0px;
   float: left;
@@ -84,12 +93,12 @@ body {
   opacity: 100%;
 }
 
-.top5-button:hover {
+.playlister-button:hover {
   cursor: pointer;
   color: black;
 }
 
-.top5-button-disabled {
+.playlister-button-disabled {
   opacity: 0.25;
   cursor: not-allowed;
 }
@@ -113,7 +122,7 @@ body {
   background-color: var(--swatch-primary);
 }
 
-#top5-workspace {
+#playlister-workspace {
   position: absolute;
   left: 0%;
   top: 10%;
@@ -230,8 +239,8 @@ body {
 }
 
 .item-number,
-.top5-item,
-.top5-item-dragged-to {
+.playlister-item,
+.playlister-item-dragged-to {
   display: flex;
   align-items: center;
   font-size: 48pt;
@@ -251,16 +260,16 @@ input {
   font-size: 20pt;
 }
 
-.top5-item,
-.top5-item-dragged-to {
+.playlister-item,
+.playlister-item-dragged-to {
   text-align: left;
   width: 95%;
   padding-left: 5%;
 }
-.top5-item {
+.playlister-item {
   background-color: var(--swatch-complement);
 }
-.top5-item-dragged-to {
+.playlister-item-dragged-to {
   background-color: var(--swatch-accent);
 }
 
