--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,11 +113,11 @@ body {
 }
 
 #playlist-cards {
-  overflow: scroll;
+  /*overflow-y: scroll;*/
   position: absolute;
   left: 0%;
   top: 10%;
-  width: 50%;
+  width: 100%;
   height: 80%;
   background-color: var(--swatch-primary);
 }
@@ -190,6 +190,8 @@ body {
   margin: 10px;
   padding: 20px;
   border-radius: 25px;
+  width: 85%;
+  border: 1px solid #000000;
 }
 
 .list-card:aria-disabled,
