--- a/client/src/App.css
+++ b/client/src/App.css
@@ -183,6 +183,11 @@ body {
   flex-direction: column;
 }
 
+#sidescreen-main {
+  width: 100%;
+  height: 100%;
+}
+
 .list-card,
 .selected-list-card,
 .unselected-list-card {
