--- a/client/src/App.css
+++ b/client/src/App.css
@@ -184,8 +184,25 @@ body {
 }
 
 #sidescreen-main {
+  overflow-y: scroll;
   width: 100%;
   height: 100%;
+}
+
+.comment-card,
+.comment-card-unpublished {
+  font-size: 18pt;
+  margin-top: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  width: 95%;
+  border: 2px solid #000000;
+  background-color: #eeeeee;
+  overflow-wrap: anywhere;
+}
+
+.comment-card-unpublished {
+  text-align: center;
 }
 
 .list-card,
@@ -197,6 +214,7 @@ body {
   border-radius: 25px;
   width: 85%;
   border: 1px solid #000000;
+  overflow-wrap: anywhere;
 }
 
 .list-card:aria-disabled,
